--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 <tr>
 <td class="org-left"><b>Web pages:</b></td>
 <td class="org-left"><a href="https://veteconomics.envt.fr/our-team/">ENVT</a> / <a href="https://github.com/youbandiaye">GitHub</a> 
- / <a href="https://www.researchgate.net/">ResearchGate</a> </td>
+ / <a href="https://www.researchgate.net/profile/Youba-Ndiaye">ResearchGate</a> </td>
 </tr>
 </tbody>
 </table>
