--- a/index.html
+++ b/index.html
@@ -475,6 +475,14 @@
 <td class="org-left">Postgraduate</td>
 <td class="org-left">2022</td>
 </tr>
+ 
+ <tr>
+<td class="org-left">Animal Health Economics</td>
+<td class="org-left">Barcelona, Lyon and Toulouse</td>
+<td class="org-right">30</td>
+<td class="org-left">Undergraduate</td>
+<td class="org-left">2021-2022</td>
+</tr>
 
 <tr>
 <td class="org-left">Statistics</td>
