--- a/index.html
+++ b/index.html
@@ -314,6 +314,13 @@
 <col  class="org-left" />
 </colgroup>
 <tbody>
+ 
+ <tr>
+<td class="org-left">2014 to 2018</td>
+<td class="org-left"><b>MCF - 2019 - 5- 19205298541</b>  French Qualification Exam to be Assistant Professor (fr.
+Maître de Conférences) in Economics</a></td>
+</tr>
+ 
 <tr>
 <td class="org-left">2014 to 2018</td>
 <td class="org-left"><b>PhD in Economics</b> at INRA and <a href="http://en.u-bourgogne.fr/">Université de Bourgogne</a></td>
