--- a/index.html
+++ b/index.html
@@ -365,9 +365,6 @@ Maître de Conférences) in Economics</a></td>
 <div id="outline-container-org9d30343" class="outline-3">
 <div class="outline-text-3" id="text-org9d30343">
 <ul class="org-ul">
-<li><b>The Association Between French Veterinary Practice Characteristics and Their Revenues and Veterinarian's Time Use 
- (with with Ikram Abdouttalib, Ahmed Ferchiou, Didier Raboisson, and Guillaume Lhermie). <i>Frontiers in veterinary science</i>, 2021. 
- [<a href="https://pubmed.ncbi.nlm.nih.gov/34179167/">link</a> ]</li>
  
  <li><b>Environmental expenditure interactions among countries, a spatial panel data analysis of OECD countries case over the period 1994-2014
  </b> (with Julie Le Gallo). <i>Economic modelling</i>, 2021, pp.244-255 
@@ -384,18 +381,19 @@ Maître de Conférences) in Economics</a></td>
 <ul class="org-ul">
  
   <li><b>Evaluating economic performance and antimicrobial consumption in French broiler production: an econometric analysis
- </b> (with Guillaume Lhermie, Jonathan Rushton and Didier Raboisson). <i>Submitted to Ecological Economics</i>, 2021. 
+ </b> (with Guillaume Lhermie, Jonathan Rushton and Didier Raboisson). <i>Submitted to Applied Economics</i>, 2022. 
 
-   <li><b>Quantifying Animal Health Care Spatial Accessibility in the French Cattle, Swine and Poultry Sectors with Two-step Floating Catchment Area Method
- </b> (with Mehdi Berrada, Guillaume Lhermie and Didier Raboisson). <i>Submitted to Scientific Reports</i>, 2021.
+  <li><b>Cocoa, livelihoods and deforestation in the Tridom Conservation Landscape: a spatial analysis</b> 
+ (with Jonas Ngouhouo-Poufouna, Sabine Chaupain-Guillot and Philippe Delacote). <i>Submitted to Regional Science and Urban Economics</i>, 2022. 
+</li>
  
-
 <div id="outline-container-orga27dd37" class="outline-3">
-<h3 id="orga27dd37">Work in progress</h3>
+<h3 id="orga27dd37"> Work in progress </h3>
 <div class="outline-text-3" id="text-orga27dd37">
 <ul class="org-ul">
-<li><b>Spatial interactions of sanitary risk factor: a spatial panel data analysis of french municipalities over the period 2010-2019</b> 
- (with Mehdi Berrada,  Didier Raboisson and Guillaume Lhermie).
+ 
+ <li><b>A spatial econometric approach on the role of protected areas in the interaction between mining activities and deforestation</b> 
+ (with Manegdo Ulrich DOAMBA, Pascale COMBES MOTEL and Jean-Louis COMBES).
 </li>
  
  <li><b>Drivers of french dairy restructuring: a spatial probit analysis</b> 
@@ -403,13 +401,10 @@ Maître de Conférences) in Economics</a></td>
 </li>
  
  <li><b>Evaluating the acceptability of biosecurity measures with a discet choice experiment method</b> 
- (with Guillaume Lhermie).
+ (with Guillaume Lhermie and Pierre Ouedraogo ).
 </li>
- 
- <li><b>Cocoa, livelihoods and deforestation in the Tridom Conservation Landscape: a spatial analysis</b> 
- (with Jonas Ngouhouo-Poufouna, Sabine Chaupain-Guillot and Philippe Delacote).
-</li>
- 
+
+  
  <li><b>Milk production function and disease prevalence:  a shadow price modelling</b> 
  (with Ahmed Ferchiou).
 </li>
@@ -418,12 +413,19 @@ Maître de Conférences) in Economics</a></td>
  (with Marie-Laure BREUILLE).
 </li>
  
+ 
+<div id="outline-container-orga27dd37" class="outline-3">
+<h3 id="orga27dd37">Other publications</h3>
+<div class="outline-text-3" id="text-orga27dd37">
+<ul class="org-ul">
+ 
+<li><b>Spatial interactions of sanitary risk factor: a spatial panel data analysis of french municipalities over the period 2010-2019</b> 
+ (with Mehdi Berrada,  Didier Raboisson and Guillaume Lhermie). <i> Scientific Reports</i>, 2022, [<a  https ://pubmed.ncbi.nlm.nih.gov/35906375/>link</a> ]</li>
 
  
-
-
- 
- 
+ <li><b>The Association Between French Veterinary Practice Characteristics and Their Revenues and Veterinarian's Time Use 
+ (with with Ikram Abdouttalib, Ahmed Ferchiou, Didier Raboisson, and Guillaume Lhermie). <i>Frontiers in veterinary science</i>, 2021. 
+ [<a href="https://pubmed.ncbi.nlm.nih.gov/34179167/">link</a> ]</li>
 
 
 <div id="outline-container-orgbc1fe79" class="outline-2">
