--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 <div id="content">
 <h1 class="title">Youba Ndiaye</h1>
 
-<a target="_blank" rel="noopener noreferrer" href="CV_Youba_Ndiaye.pdf">[Click here for the .pdf version]</a>
+<a target="_blank" rel="noopener noreferrer" href="CV_Youba_Ndiaye_maj.pdf">[Click here for the .pdf version]</a>
 
 <div id="outline-container-org3deedcc" class="outline-2">
 <h2 id="org3deedcc">Contact Information</h2>
