--- a/index.html
+++ b/index.html
@@ -415,9 +415,15 @@ Maître de Conférences) in Economics</a></td>
  
  
 <div id="outline-container-orga27dd37" class="outline-3">
-<h3 id="orga27dd37">Other publications</h3>
+<h3 id="orga27dd37">Interdisciplinary publications</h3>
 <div class="outline-text-3" id="text-orga27dd37">
 <ul class="org-ul">
+ 
+<li><b>Economic evaluation of antimicrobial use practices in animal agriculture: a case of poultry farming</b> 
+ ({with Lhermie, Guillaume; Rushton, Jonathan and Raboisson, Didier). <i> accepted in Journal of Antimicrobial Chemotherapy </i>, 2022, [<a </a> ]</li> 
+ 
+ <li><b>The gender wage gap in the French veterinary labor market </b> 
+ (with Mehdi Berrada,  Didier Raboisson and Guillaume Lhermie). <i> Frontiers in veterinary science</i>, 2022, [<a  https://doi.org/10.3389/fvets.2022.1001012>link</a> ]</li>
  
 <li><b>Spatial interactions of sanitary risk factor: a spatial panel data analysis of french municipalities over the period 2010-2019</b> 
  (with Mehdi Berrada,  Didier Raboisson and Guillaume Lhermie). <i> Scientific Reports</i>, 2022, [<a  https ://pubmed.ncbi.nlm.nih.gov/35906375/>link</a> ]</li>
