--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Maître de Conférences) in Economics</a></td>
 <ul class="org-ul">
  
   <li><b>Evaluating economic performance and antimicrobial consumption in French broiler production: an econometric analysis
- </b> (with Guillaume Lhermie, Jonathan Rushton and Didier Raboisson). <i>Submitted to Applied Economics</i>, 2022. 
+ </b> (with Guillaume Lhermie, Jonathan Rushton and Didier Raboisson). <i>Submitted to Journal of Agricultural Economics </i>, 2022. 
 
   <li><b>Cocoa, livelihoods and deforestation in the Tridom Conservation Landscape: a spatial analysis</b> 
  (with Jonas Ngouhouo-Poufouna, Sabine Chaupain-Guillot and Philippe Delacote). <i>Submitted to Regional Science and Urban Economics</i>, 2022. 
@@ -420,7 +420,7 @@ Maître de Conférences) in Economics</a></td>
 <ul class="org-ul">
  
 <li><b>Economic evaluation of antimicrobial use practices in animal agriculture: a case of poultry farming</b> 
- ({with Lhermie, Guillaume; Rushton, Jonathan and Raboisson, Didier). <i> accepted in Journal of Antimicrobial Chemotherapy </i>, 2022, [<a </a> ]</li> 
+ (with Lhermie, Guillaume; Rushton, Jonathan and Raboisson, Didier). <i> accepted in Journal of Antimicrobial Chemotherapy </i>, 2022, </li> 
  
  <li><b>The gender wage gap in the French veterinary labor market </b> 
  (with Mehdi Berrada,  Didier Raboisson and Guillaume Lhermie). <i> Frontiers in veterinary science</i>, 2022, [<a  https://doi.org/10.3389/fvets.2022.1001012>link</a> ]</li>
