--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ Maître de Conférences) in Economics</a></td>
  (with Mehdi Berrada,  Didier Raboisson and Guillaume Lhermie). <i> Scientific Reports</i>, 2022, [<a  https ://pubmed.ncbi.nlm.nih.gov/35906375/>link</a> ]</li>
 
  
- <li><b>The Association Between French Veterinary Practice Characteristics and Their Revenues and Veterinarian's Time Use 
+ <li><b>The Association Between French Veterinary Practice Characteristics and Their Revenues and Veterinarian's Time Use <b>
  (with with Ikram Abdouttalib, Ahmed Ferchiou, Didier Raboisson, and Guillaume Lhermie). <i>Frontiers in veterinary science</i>, 2021. 
  [<a href="https://pubmed.ncbi.nlm.nih.gov/34179167/">link</a> ]</li>
 
@@ -438,6 +438,10 @@ Maître de Conférences) in Economics</a></td>
 <h2 id="orgbc1fe79">Communications</h2>
 <div class="outline-text-2" id="text-orgbc1fe79">
 <dl class="org-dl">
+ 
+ <dt>2021</dt><dd><b>20th International workshop spatial econometrics and  statistics</b> (Lille, France) ;
+ 
+
  
   <dt>2021</dt><dd><b>Socièté Française d'Economie Rurale (SFER)</b> (December, Toulouse, France) ;
 <b>International Society for Economics and Social Sciences of Animal Health conference (ISESSAH)</b> (November, Malaysia) ; 
